--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .ipynb_checkpoints/
 data/
 matlab_files/images/
-models/
 notebooks/.ipynb_checkpoints/
 notebooks/CLR/
 notebooks/logs/
@@ -13,3 +12,4 @@ venv_multiwienernet/
 temp
 logs_dev
 results
+models
