--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 models/* filter=lfs diff=lfs merge=lfs -text
+*.data-00001-of-00002 filter=lfs diff=lfs merge=lfs -text
+*.data-00001-of-00001 filter=lfs diff=lfs merge=lfs -text
+*.index filter=lfs diff=lfs merge=lfs -text
